Fix underscore not being visible in terminal

--- a/src/style/_terminal.scss
+++ b/src/style/_terminal.scss
@@ -88,7 +88,6 @@
 	color: var(--color-text);
 	font-family: inherit;
 	font-size: 100%;
-	height: 1em;
 	line-height: 1.1;
 	margin: 0;
 	padding: 0;
